# draft_maker

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  draft.ipynb  interface.cc  interface.py  interface_bis.py  requirements.txt
data/: exemple.xlsx  fr.xlsx  name.csv  rate.csv
draft_from_excel/: arthur.py  draft.py  draft_bis.py
experiments/: draft.ipynb
include/: Draft.hpp  Parser.hpp  ProgressIndicator.hpp
src/: Draft.cc  Parser.cc  ProgressIndicator.cc
